--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
         </tr>
       </thead>
       <tbody id="output">
-		  <tr><td colspan="2" class="text-center">Loading...</td></tr>
+		  <tr id="loading"><td>Loading...</td></tr>
 	  </tbody>
     </table>
 
